# minimal_astroide

./: README.md  build.gradle  gradle.properties  pyproject.toml
.github/workflows/: test.yml
python_tests/integration/: __init__.py  test_healpix.py
python_wrapper/: setup.py
python_wrapper/astroide_wrapper/: __init__.py
python_wrapper/astroide_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/main/scala/org/alerce/minimal_astroide/: AstroideUDF.scala  HealixPartitioner.scala  Xmatcher.scala
